--- a/Hola.html
+++ b/Hola.html
@@ -1,4 +1,25 @@
-<html>
-    <p2>Hola Mundo</p2>
-    <p5>HOLA MUNDO</p5>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Portafolio de trabajo</title>
+</head>
+<body>
+    My name is Jonathan Uriel Alvarado Varela i´m 21 years old
+    <br>Skills:
+    <Ul>
+        <li>Java</li>
+        <li>JavaScrip</li>
+        <li>PHP</li>
+        <li>Mysql</li>
+        <li>English level b1</li>
+    </Ul>
+    <br>Works:
+    <Ul>
+        <li>SATM</li>
+        
+    </Ul>
+
+
+</body>
 </html>
