--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     My name is Jonathan Uriel Alvarado Varela i´m 21 years old
     <br>Skills:
-    <Ul>
-        <li>Java</li>
-        <li>JavaScrip</li>
-        <li>PHP</li>
-        <li>Mysql</li>
-        <li>English level b1</li>
+    <Ul class="list-group">
+        <li class="list-group-item">Java</li>
+        <li class="list-group-item">JavaScrip</li>
+        <li class="list-group-item">PHP</li>
+        <li class="list-group-item">Mysql</li>
+        <li class="list-group-item">English level b1</li>
     </Ul>
-    <br>Works:
+    <br>Proyects:
     <Ul>
         <li>SATM</li>
     </Ul>
