--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Portafolio de trabajo</title>
 </head>
 <body>
-   
+   <div class="p-3 mb-2 bg-dark text-white">
    <div class="card text-white bg-dark" style="max-width: 18rem;">
     <img src="Profile.jpg" class="card-img" alt="...">
         <div class="card-body">
@@ -92,6 +92,7 @@
       </div>
     
     <br>Nick name: AzarAlt3r
+  </div>
     
 
 </body>
