--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Portafolio de trabajo</title>
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+          <img src="Riot_logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+          Portafolio de trabajo
+        </a>
+      </nav>
    <div class="p-3 mb-2 bg-dark text-white">
    <div class="card text-white bg-dark" style="max-width: 18rem;">
     <img src="Profile.jpg" class="card-img" alt="...">
