--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           Portafolio de trabajo
         </a>
       </nav>
-   <div class="">
+   <div class="p-3 mb-2 bg-light text-dark">
    <div class="card text-white bg-dark" style="max-width: 18rem;">
     <img src="Profile.jpg" class="card-img" alt="...">
         <div class="card-body">
